--- a/UF1/MP08UF1e1/estils.css
+++ b/UF1/MP08UF1e1/estils.css
@@ -71,6 +71,8 @@ div .inter, .vistos, .pendents, .pelisvistes, .seriess, .seriesv{
 }
 
 .inter{
+  position: relative;
+  top: 50px;
   width: 100%;
   border-radius: 5%;
   clear: both;
