--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,81 @@
 body{
   background: red;
-  font-size: 1.5rem;
-  font-family: Tahoma;
+  font-size: 1.2rem;
+  font-family:'Heebo', sans-serif;;
 }
 
-h1{
-  clear: both;
-}
 
-ul li:hover{
-  background-color: yellow;
-  color: black;
-}
+
+
+
+
 
 @media screen and (min-width:960px){
 
  body{
-  background: cyan;
+  background: white;
  }
 
+ ul li ul li:hover{
+   background-color: white;
+ }
+
+ .uf1{
+  background-color: orange;
+  height: 25rem;
+ }
+
+ .uf2{
+  background-color: black;
+  color: white;
+  height: 25rem;
+ }
+
+ .uf3{
+  background-color: orange;
+  height: 25rem;
+ }
+
+ .uf4{
+  background-color: black;
+  color: white;
+  height: 25rem;
+ }
 
 
 ul li{
   display: block;
-   background: green;
-   float: left;
-   margin-top: 0.2rem;
-   padding-top: 0.4rem;
-   width: 5rem;
-   clear: both;
- }
+  margin: 0 auto;
+  width: 90%;
+  background-color: yellow;
+  clear: both;
+}
 
 
+ul li ul{
+margin: 2rem;
+}
 
- ul li ul a{
-   display: block;
-   width: 8rem;
-   height: 8rem;
-   background: red;
-   border-radius: 50%;
-   text-align: center;
-   margin: 0.5rem;
-   float: left;
- }
+ul li ul li{
+
+  width: 6rem;
+  height: 6rem;
+  border-radius: 10%;
+  line-height: 6rem;
+  text-align: center;
+}
+
+ul li ul a{
+  float: left;
+  padding: 1rem;
+  text-decoration: none;
+  font-family:'Heebo', sans-serif;;
+}
+
+.feedly{
+  background-image: url(img/feedly.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 }
