--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body{
 
  body{
   background: white;
+  color: white;
  }
 
  ul li ul li:hover{
@@ -21,34 +22,39 @@ body{
  }
 
  .uf1{
-  background-color: orange;
-  height: 25rem;
+  background-color: #2274A5;
+  height: 40rem;
+  overflow: scroll;
+  border-radius: 2rem 0 0 0;
  }
 
  .uf2{
-  background-color: black;
+  background-color: #2274A5;
   color: white;
-  height: 25rem;
+  height: 5rem;
+  overflow: scroll;
  }
 
  .uf3{
-  background-color: orange;
-  height: 25rem;
+  background-color: #2274A5;
+  height: 5rem;
+  overflow: scroll;
  }
 
  .uf4{
-  background-color: black;
+  background-color: #2274A5;
   color: white;
-  height: 25rem;
+  height: 20rem;
+  overflow: scroll;
  }
 
 
 ul li{
   display: block;
   margin: 0 auto;
-  width: 90%;
-  background-color: yellow;
-  clear: both;
+  width: 80%;
+  background-color: #E9F1F7;
+
 }
 
 
@@ -58,11 +64,18 @@ margin: 2rem;
 
 ul li ul li{
 
-  width: 6rem;
-  height: 6rem;
-  border-radius: 10%;
-  line-height: 6rem;
+  width: 20rem;
+  height: 20rem;
+  border-radius: 15%;
+  line-height: 20rem;
   text-align: center;
+  margin: 0 auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+h3{
+  margin: 1.5rem;
 }
 
 ul li ul a{
@@ -72,69 +85,86 @@ ul li ul a{
   font-family:'Heebo', sans-serif;;
 }
 
+ul li ul a:hover {
+  color: transparent;
+}
+
 .correccio:hover{
   background-image: url(../img/correccio.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .feedly:hover{
   background-image: url(../img/feedly.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .floata:hover{
   background-image: url(../img/floata.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .floatb:hover{
   background-image: url(../img/floatb.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .floatc:hover{
   background-image: url(../img/floatc.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .comic:hover{
   background-image: url(../img/comic.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .escacs:hover{
   background-image: url(../img/escacs.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .apps:hover{
   background-image: url(../img/apps.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .cara:hover{
   background-image: url(../img/cara.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .floreta:hover{
   background-image: url(../img/floreta.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .responsive:hover{
   background-image: url(../img/responsive.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
+
+.correccio:active{
+  transform: scale(1.2);
+}
+.feedly:active{
+  transform: scale(1.2);
+}
+.floata:active{
+  transform: scale(1.2);
+}
+.floatb:active{
+  transform: scale(1.2);
+}
+.floatc:active{
+  transform: scale(1.2);
+}
+.comic:active{
+  transform: scale(1.2);
+}
+.escacs:active{
+  transform: scale(1.2);
+}
+.apps:active{
+  transform: scale(1.2);
+}
+.cara:active{
+  transform: scale(1.2);
+}
+.floreta:active{
+  transform: scale(1.2);
+}
+.responsive:active{
+  transform: scale(1.2);
+}
+
 }
