--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,14 @@ body{
  }
 
 video{
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
 }
+
  ul li ul li:hover{
    background-color: white;
  }
