--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,15 @@ body{
   font-family:'Heebo', sans-serif;
 }
 
-
-
-
-
-
-
 @media screen and (min-width:960px){
 
  body{
   background: white;
   color: white;
+  background-image: url(../img/capts/portafoli.png);
+  background-size: cover;
+  background-repeat: no-repeat;
  }
-
-
 
  ul li ul li:hover{
    background-color: white;
@@ -81,7 +76,6 @@ ul li{
   margin: 0 auto;
   width: 80%;
   background-color: #E9F1F7;
-
 }
 
 
@@ -105,7 +99,7 @@ ul li ul li{
 h3{
   margin: 1.5rem;
   font-size: 1.5rem;
-  font-family:'Heebo', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h3:hover{
@@ -116,7 +110,8 @@ ul li ul a{
   float: left;
   padding: 1rem;
   text-decoration: none;
-  font-family:'Heebo', sans-serif;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
 }
 
 ul li ul a:hover {
@@ -124,50 +119,48 @@ ul li ul a:hover {
 }
 
 .correccio{
-  background-image: url(../img/);
+  background-image: url(../img/capts/examen.png);
 }
 
 .feedly{
-  background-image: url(../img/);
+  background-image: url(../img/capts/feedly.png);
 }
 
 .floata{
-  background-image: url(../img/);
+  background-image: url(../img/capts/floata.png);
 }
 
 .floatb{
-  background-image: url(../img/);
+  background-image: url(../img/capts/floatb.png);
 }
 
 .floatc{
-  background-image: url(../img/);
+  background-image: url(../img/capts/floatc.png);
 }
 
 .comic{
-  background-image: url(../img/);
+  background-image: url(../img/capts/comic.png);
 }
 
 .escacs{
-  background-image: url(../img/);
+  background-image: url(../img/capts/escacs.png);
 }
 
 .apps{
-  background-image: url(../img/);
+  background-image: url(../img/capts/apps.png);
 }
 
 .cara{
-  background-image: url(../img/);
+  background-image: url(../img/capts/cara.png);
 }
 
 .floreta{
-  background-image: url(../img/);
+  background-image: url(../img/capts/floreta.png);
 }
 
 .responsive{
-  background-image: url(../img/);
+  background-image: url(../img/capts/responsive.png);
 }
-
-
 
 .correccio:hover{
   background-image: url(../img/correccio.png);
