--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
   background: red;
   font-size: 1.2rem;
-  font-family:'Heebo', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 @media screen and (min-width:960px){
@@ -12,6 +12,15 @@ body{
   background-image: url(../img/capts/portafoli.png);
   background-size: cover;
   background-repeat: no-repeat;
+ }
+
+ video{
+   position: fixed;
+   right: 0;
+   bottom: 0;
+   min-width: 100%;
+   min-height: 100%;
+   z-index: -1;
  }
 
  ul li ul li:hover{
