--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body{
   background-color: #2274A5;
   height: auto;
   overflow: auto;
-  border-radius: 2rem 2rem 0 0;
+  border-radius: 2rem 2rem 1rem 1rem;
   margin-top: 1rem;
  }
 
@@ -45,6 +45,7 @@ body{
   color: white;
   height: auto;
   overflow: auto;
+  border-radius: 1rem;
   margin-top: 1rem;
  }
 
@@ -57,6 +58,7 @@ body{
   background-color: #2274A5;
   height: auto;
   overflow: auto;
+  border-radius: 1rem;
   margin-top: 1rem;
  }
 
@@ -71,7 +73,7 @@ body{
   height: auto;
   overflow: auto;
   margin-top: 1rem;
-  border-radius: 0 0 2rem 2rem;
+  border-radius: 1rem 1rem 2rem 2rem;
  }
 
  .uf4:hover{
