--- a/css/style.css
+++ b/css/style.css
@@ -149,10 +149,11 @@ h3:hover{
 
 ul li ul a{
   float: left;
-  padding: 1rem;
+  margin: 1rem;
   text-decoration: none;
   color: white;
   font-family: 'Montserrat', sans-serif;
+  border-radius: 15%;
 }
 
 ul li ul a:hover {
