--- a/css/style.css
+++ b/css/style.css
@@ -307,14 +307,48 @@ ul li ul a:hover {
     background-color: white;
   }
 
+  h2{
+   color: white;
+   font-size: 1.5rem;
+   width: 2rem;
+   display: inline-block;
+   text-decoration: none;
+  }
+
+  h2:hover{
+   color: #FFFD82;
+  }
+
+  h3{
+   width: 10rem;
+   margin: 1.5rem;
+   font-size: 1.2rem;
+   font-family: 'Montserrat', sans-serif;
+   display: inline-block;
+  }
+
+  h3:hover{
+   color: #FFFD82;
+  }
+
   .barra{
     background-color: #2274A5;
     width: 80%;
-    height: 5rem;
-    overflow: auto;
+    height: 3rem;
     border-radius: 2rem;
     margin: 0 auto;
     text-align: center;
+    padding: 10px;
+  }
+
+  .barra h2{
+    font-size: 1rem;
+
+  }
+
+  .barra h3{
+    margin: 0;
+
   }
 
   .barra:hover{
@@ -393,38 +427,14 @@ ul li ul a:hover {
 
   ul li ul li{
 
-   width: 20rem;
-   height: 20rem;
+   width: 12rem;
+   height: 12rem;
    border-radius: 15%;
-   line-height: 20rem;
+   line-height: 12rem;
    text-align: center;
    margin: 0 auto;
    background-size: cover;
    background-repeat: no-repeat;
-  }
-
-  h2{
-   color: white;
-   font-size: 1.5rem;
-   width: 4rem;
-   display: inline-block;
-   text-decoration: none;
-  }
-
-  h2:hover{
-   color: #FFFD82;
-  }
-
-  h3{
-   width: 14rem;
-   margin: 1.5rem;
-   font-size: 1.5rem;
-   font-family: 'Montserrat', sans-serif;
-   display: inline-block;
-  }
-
-  h3:hover{
-   color: #FFFD82;
   }
 
   ul li ul a{
