--- a/css/style.css
+++ b/css/style.css
@@ -309,8 +309,9 @@ ul li ul a:hover {
 
   h2{
    color: white;
-   font-size: 1.5rem;
-   width: 2rem;
+   margin: 0.2rem;
+   font-size: 0.8rem;
+   width: 1.6rem;
    display: inline-block;
    text-decoration: none;
   }
@@ -321,8 +322,8 @@ ul li ul a:hover {
 
   h3{
    width: 10rem;
-   margin: 1.5rem;
-   font-size: 1.2rem;
+   margin: 1rem;
+   font-size: 1rem;
    font-family: 'Montserrat', sans-serif;
    display: inline-block;
   }
@@ -334,7 +335,7 @@ ul li ul a:hover {
   .barra{
     background-color: #2274A5;
     width: 80%;
-    height: 3rem;
+    height: 2.2rem;
     border-radius: 2rem;
     margin: 0 auto;
     text-align: center;
@@ -342,12 +343,13 @@ ul li ul a:hover {
   }
 
   .barra h2{
-    font-size: 1rem;
+
 
   }
 
   .barra h3{
-    margin: 0;
+  margin: 0;
+  line-height: 2rem;
 
   }
 
@@ -421,7 +423,7 @@ ul li ul a:hover {
 
 
   ul li ul{
-  margin: 2rem;
+  margin: ;
   margin: 0 auto;
   }
 
@@ -432,7 +434,6 @@ ul li ul a:hover {
    border-radius: 15%;
    line-height: 12rem;
    text-align: center;
-   margin: 0 auto;
    background-size: cover;
    background-repeat: no-repeat;
   }
@@ -444,6 +445,7 @@ ul li ul a:hover {
    color: white;
    font-family: 'Montserrat', sans-serif;
    border-radius: 15%;
+   margin-left: 2rem;
   }
 
   ul li ul a:hover {
