--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,7 @@ ul li ul a:hover {
    height: auto;
    overflow: auto;
    border-radius: 2rem 2rem 1rem 1rem;
+   margin: 0 auto;
    margin-top: 1rem;
   }
 
@@ -387,6 +388,7 @@ ul li ul a:hover {
    height: auto;
    overflow: auto;
    border-radius: 1rem;
+   margin: 0 auto;
    margin-top: 1rem;
   }
 
@@ -400,6 +402,7 @@ ul li ul a:hover {
    height: auto;
    overflow: auto;
    border-radius: 1rem;
+   margin: 0 auto;
    margin-top: 1rem;
   }
 
@@ -413,6 +416,7 @@ ul li ul a:hover {
    color: white;
    height: auto;
    overflow: auto;
+   margin: 0 auto;
    margin-top: 1rem;
    border-radius: 1rem 1rem 2rem 2rem;
   }
@@ -454,7 +458,6 @@ ul li ul a:hover {
    color: white;
    font-family: 'Montserrat', sans-serif;
    border-radius: 15%;
-   margin-left: 2rem;
   }
 
   ul li ul a:hover {
