--- a/css/style.css
+++ b/css/style.css
@@ -330,8 +330,8 @@ ul li ul a:hover {
   }
 
   h3{
-   width: 10rem;
-   margin: 1rem;
+   width: 5rem;
+   margin: 0.2rem;
    font-size: 0.8rem;
    font-family: 'Montserrat', sans-serif;
    display: inline-block;
@@ -348,7 +348,7 @@ ul li ul a:hover {
     border-radius: 2rem;
     margin: 0 auto;
     text-align: center;
-    padding: 2px;
+    padding: 0;
   }
 
   .barra h2{
